# website-blog

./: .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  MONOREPO_IMPLEMENTATION.md  PUBLER_API_EVALUATION.md  case-study-prompt-template.md  package-lock.json  package.json
.agents/skills/cv-builder/: SKILL.md
.claude/commands/: process-blog.md
apps/blog/: CLAUDE.md  LICENSE  README.md  astro.config.mjs  eslint.config.js  intro.md  package-lock.json  package.json  pyproject.toml  sitemap.yaml  tailwind.config.ts  tsconfig.json  vercel.json
apps/blog/.astro/: settings.json
apps/blog/scripts/: check_links.py  shortlinks.py
apps/blog/src/: app.postcss
apps/website/: CLAUDE.md  README.md  astro.config.mjs  case-studies.md  coming-soon.html  instructions.md  instructions_landing.md  package-lock.json  package.json  relativize-dist-html.mjs  server.py  tailwind.config.mjs  vercel.json
apps/website/.astro/: data-store.json  settings.json
cv-builder/: MVV-EVOLUTION.md  MVV-KNOWLEDGE.md  My Resume.txt  PARALLEL-CLAY-RESEARCH.md  markdown_to_pdf.py  servando-torres-ai-developer-cv.md  servando-torres-booking-senior-ml-scientist-cv.md  servando-torres-one-pager-cv.md  servando-torres-one-pager.md  servando-torres-playfair-resume.html  servando-torres-playfair-resume.md  servando-torres-python-fastapi-prefect-cv.md  servando-torres-senior-software-engineer-ai-applications.md  servando-torres-simple-cto-resume.md  servando-torres-sr-ml-engineer-databricks-cv.md
tools/: generate_desc.py  generate_sitemap.py  listen_post.py  pyproject.toml  shortlinks.py
(+81 files in other folders)
